Fix footer covering content

--- a/styles/main.css
+++ b/styles/main.css
@@ -2,11 +2,11 @@
     --background: rgb(224, 234, 247);
     --header-background: white;
     --footer-background: rgb(243, 242, 242);
+    --footer-height: 40px;
 }
 
 body {
-    height: 100%;
-    padding-bottom: 30px;
+    margin-bottom: var(--footer-height);
     font-family: 'Rubik', san-serif;
     background: var(--background);
 }
@@ -44,6 +44,7 @@ footer {
     bottom: 0;
     left: 0;
     right: 0;
+    height: var(--footer-height);
     padding: 10px;
     display: flex;
     justify-content: flex-end;
